# option-and-var-exercises

./: .gitignore  Exercises.xlsx  README.md  pyproject.toml
src/: black_scholes.py  var_calculation.py
tests/: test_black_scholes.py
tests/integration/: test_var_calculation.py
tests/unit/: test_black_scholes.py  test_var_calculation.py
