[project]
name = "option_and_var_exercises"
version = "0.1.0"
description = "Implementation of Black&Scholes model for vanilla option pricing and Value at Risk methodology"
authors = [
    {name = "Johann Maquin"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy (>=1.15.1,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
